--- a/SampleAppSMSTest/app/src/main/AndroidManifest.xml
+++ b/SampleAppSMSTest/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
 
         <activity android:name=".onboarding.SignupActivity"/>
+        <activity android:name=".onboarding.activity.ForgetPasswordActivity"/>
     </application>
 
 
